fix(IYY-328): add a border to improve visibility

--- a/modules/ai_engine_chat/css/chat_button.css
+++ b/modules/ai_engine_chat/css/chat_button.css
@@ -5,7 +5,7 @@
   z-index: 1000;
 
   a {
-    color: #E5EFEC;
+    color: #e5efec;
     background-color: #00356B;
     padding: 1em;
     border-radius: 0 30px;
@@ -14,6 +14,7 @@
     text-decoration: none;
     font-size: 1rem;
     transition: all 200ms ease-in-out;
+    border: 1.25rem solid #e5efec;
 
     &:focus,
     &:hover {
